<resources>
    <string name="app_name">快乐学习</string>
    <string name="title_home">首页</string>
    <string name="title_helper">问答</string>
    <string name="title_profile">我的</string>
    <string name="login">登录</string>
    <string name="logout">登出</string>
    <string name="register">注册</string>
    <string name="user_profile">用户头像</string>
    <string name="user_history">浏览历史</string>
    <string name="user_collection">用户收藏</string>
    <string name="exercise_rec">试题推荐</string>
    <string name="change_profile">更改密码</string>
    <string name="to_register">没有账号？点此注册</string>
    <string name="password">密码</string>
    <string name="username">用户名</string>
    <string name="helper_name">小智</string>
    <string name="old_password">原密码</string>
    <string name="new_password">新密码</string>
    <string name="change_confirm">确认修改</string>
    <string name="user_background">用户背景</string>
    <string name="select_picture">选择图片</string>
    <string name="subject_title">我的兴趣</string>
    <string name="subject_manager">管理</string>
    <string name="subject_manager_finish">完成</string>
    <string name="detail_relation">相关实体</string>
    <string name="detail_exercise">相关习题</string>
    <string name="search_entity">实体</string>
    <string name="search_text">文本</string>
    <string name="search_exercise">试卷</string>
    <string name="search_outlline">提纲</string>
    <string name="search_history">搜索历史</string>
    <string name="search_history_clear">清除记录</string>
    <string name="search_sort">排序</string>
    <string name="search_subject">学科</string>
    <string name="search_order_default">默认</string>
    <string name="search_subject_default">语文</string>
    <string name="change_user_profile">更改头像</string>
    <string name="change_user_background">更改背景</string>
    <string name="not_logged_in">未登录</string>
    <string name="show_more">点击展开更多</string>
    <string name="search_filter">筛选</string>

</resources>